--- a/locale/it/LC_MESSAGES/meerk40t.po
+++ b/locale/it/LC_MESSAGES/meerk40t.po
@@ -3406,10 +3406,6 @@ msgstr "Ruota"
 msgid "Rotate {angle}°"
 msgstr "Ruota di {angle}°"
 
-#: meerk40t/core/elements.py:7799
-msgid "Reify User Changes"
-msgstr "Applica le modifiche dell'utente"
-
 #: meerk40t/core/elements.py:7807
 msgid "Break Subpaths"
 msgstr "Spezza sottopercorsi"
@@ -16765,14 +16761,6 @@ msgstr "Interprete Lihuiyu collegato a {device}"
 msgid "Intepreter cannot be attached to any device."
 msgstr "L'Intepreter non può essere collegato a nessun dispositivo"
 
-#: ./meerk40t\lihuiyu\plugin.py:30
-msgid "K40-CO2-Laser (m2nano-Board) (Green/Blue)"
-msgstr ""
-
-#: ./meerk40t\lihuiyu\plugin.py:61
-msgid "K40-CO2-Laser (m3nano-Board) (Purple/Blue)"
-msgstr ""
-
 #: ./meerk40t\lihuiyu\gui\lhydrivergui.py:49
 msgid "Optional: Distinguish between different lasers using the match criteria below.\n-1 match anything. 0+ match exactly that value."
 msgstr "Opzionale: Distinguere tra i diversi laser utilizzando i criteri di corrispondenza riportati di seguito.\n-1 corrisponde a qualsiasi cosa. 0+ corrisponde esattamente a quel valore"
@@ -16788,10 +16776,6 @@ msgstr ""
 #: ./meerk40t\lihuiyu\gui\tcpcontroller.py:98
 msgid "Highest number of bytes in the write buffer."
 msgstr "Numero massimo di byte nel buffer di scrittura"
-
-#: ./meerk40t\moshi\plugin.py:24
-msgid "CO2-Laser (Moshi-Board)"
-msgstr ""
 
 #: ./meerk40t\newly\device.py:622
 msgid "sends raw data exactly as composed"
@@ -16945,29 +16929,9 @@ msgstr "Device Newly rilevato:"
 msgid "Newly devices were found. But something else was connected to them."
 msgstr ""
 
-#: ./meerk40t\newly\gui\newlyconfig.py:34
-msgid "Newly"
-msgstr "Newly"
-
-#: ./meerk40t\newly\gui\newlyconfig.py:36
-msgid "Global"
-msgstr "Globale"
-
-#: ./meerk40t\newly\gui\newlyconfig.py:53
-msgid "Raster Chart"
-msgstr "Tabella Raster"
-
 #: ./meerk40t\newly\gui\newlycontroller.py:173
 msgid "Newly-Controller"
 msgstr "Controller HaoYue V8.1/V23/V9 board (Newlydraw)"
-
-#: ./meerk40t\newly\gui\operationproperties.py:29
-msgid "Advanced Acceleration"
-msgstr ""
-
-#: ./meerk40t\newly\gui\operationproperties.py:30
-msgid "Set acceleration value for this operation"
-msgstr "Impostare il valore di accelerazione per questa operazione"
 
 msgid "Show Labels"
 msgstr "Mostra etichette"
@@ -18035,25 +17999,9 @@ msgstr "cancella la porta di ingresso"
 msgid "Initializes a galvo clone board from specified file."
 msgstr "Inizializza una scheda galvo clone dal file specificato"
 
-#: ./meerk40t\balormk\plugin.py:31
-msgid "Fibre-Laser (JCZ-Controller) (Non-MOPA)"
-msgstr "Fibra-laser (controllore JCZ) (non MOPA)"
-
 #: ./meerk40t\balormk\plugin.py:34
 msgid "The JCZ Controller is a type of Galvo Laser Controller for several different sources compatible with the EZCad2™ software."
 msgstr "Il controller JCZ è un tipo di controller per laser galvanometrici per diverse sorgenti. Compatibili con il software EZCad2™"
-
-#: ./meerk40t\balormk\plugin.py:54
-msgid "Fibre-Laser (JCZ-Controller) (MOPA)"
-msgstr "Fibra laser (controllerJCZ) (MOPA)"
-
-#: ./meerk40t\balormk\plugin.py:83
-msgid "CO2 (JCZ-Controller)"
-msgstr "CO2 (JCZ-Controller)"
-
-#: ./meerk40t\balormk\plugin.py:110
-msgid "UV (JCZ-Controller)"
-msgstr "UV (controller JCZ)"
 
 #: ./meerk40t\balormk\plugin.py:119
 msgid "UV-Laser"
@@ -18066,10 +18014,6 @@ msgstr "Test"
 #: ./meerk40t\balormk\gui\balorconfig.py:59
 msgid "Bits"
 msgstr "Bits"
-
-#: ./meerk40t\balormk\gui\gui.py:94
-msgid "Live Hull"
-msgstr "Contorno in diretta"
 
 #: ./meerk40t\camera\plugin.py:94
 msgid "Known camera URIs:"
@@ -19339,7 +19283,6 @@ msgstr ""
 "Vi invitiamo a unirvi alla lotta contro il cancro. Anche, se potete, con una donazione a una delle tante organizzazioni di ricerca e di beneficenza in tutto il mondo.\n\n"
 "Se siete interessati a saperne di più sulla storia dello sviluppo di MeerK40t, fate riferimento a:\nhttps://github.com/meerk40t/meerk40t/wiki/History:-Major-Version-History,-Changes,-and-Reasons"
 
-#: meerk40t/gui/about.py:1946
 msgid "In Memory of David Olsen"
 msgstr "In ricordo di David Olsen"
 
@@ -19782,7 +19725,7 @@ msgstr "È possibile definire una risoluzione più grossolana, ad esempio 64: in
 
 #: meerk40t/gui/propertypanels/imageproperty.py:1324
 msgid "3D-Treatment"
-msgstr "Trattamento 3D"
+msgstr "Modalità 3D"
 
 #: meerk40t/network/console_server.py:74
 msgid "shutdown current webserver"
@@ -19887,7 +19830,7 @@ msgstr "Clic per ottenere un elenco di comandi utili"
 
 #: meerk40t/gui/autoexec.py:73
 msgid "Tip: you can deactivate any command by starting the line with a '#'"
-msgstr "Suggerimento: è possibile disattivare qualsiasi comando iniziando la riga con un “#”"
+msgstr "Suggerimento: è possibile disattivare qualsiasi comando iniziando la riga con un '#'"
 
 #: meerk40t/gui/autoexec.py:75
 msgid "The autoexec content of this file will be ignored if this option is deactive"
@@ -20474,8 +20417,11 @@ msgid "Rotate the selected elements by the given amount"
 msgstr "Ruota gli elementi selezionati del valore indicato"
 
 #: meerk40t/core/elements/element_treeops.py:3778
+msgid "Reify User Changes"
+msgstr "Applica le modifiche dell'utente"
+
 msgid "Reify user changes"
-msgstr ""
+msgstr "Applica le modifiche dell'utente"
 
 #: meerk40t/core/elements/element_treeops.py:3780
 msgid "Integrate user scale, translate and rotate changes"
@@ -20621,6 +20567,60 @@ msgstr "Attivo: le linee di tratteggio saranno ottimizzate"
 msgid "Inactive: hatch lines will be burnt sequentially."
 msgstr "Inattivo: le linee di tratteggio vengono eseguite una dopo l'altra"
 
+#: ./meerk40t\newly\gui\operationproperties.py:29
+msgid "Advanced Acceleration"
+msgstr "Accelerazione"
+
+#: ./meerk40t\newly\gui\operationproperties.py:30
+msgid "Set acceleration value for this operation"
+msgstr "Impostare il valore di accelerazione per questa operazione"
+
+#: ./meerk40t\newly\gui\newlyconfig.py:34
+msgid "Newly"
+msgstr "Newlydraw"
+
+#: ./meerk40t\newly\gui\newlyconfig.py:36
+msgid "Global"
+msgstr "Globale"
+
+#: ./meerk40t\newly\gui\newlyconfig.py:53
+msgid "Raster Chart"
+msgstr "Tabella Raster"
+
+#: meerk40t/gui/propertypanels/attributes.py:1412
+msgid "Auto-Hide"
+msgstr "Nascondere automaticamente"
+
+#: meerk40t/gui/propertypanels/attributes.py:1413
+msgid "Autohide children"
+msgstr "Nasconde gli elementi"
+
+#: meerk40t/gui/propertypanels/attributes.py:1416
+msgid "Toggle the adoption behaviour of the effect."
+msgstr "Cambia il comportamento dell'effetto"
+
+#: meerk40t/gui/propertypanels/attributes.py:1418
+msgid "Active: Added children will be automatically hidden, so only the result of the effect will be seen/burned"
+msgstr "Attivo: gli elementi contenuti sono nascosti, solo il risultato dell'effetto viene visualizzato/scoperto"
+
+#: meerk40t/gui/propertypanels/attributes.py:1420
+msgid "Inactive: Added children remain unchanged, so both the child and the result of the effect will be seen/burned"
+msgstr "Inattivo: gli elementi contenuti rimangono inalterati, sia l'elemento che il risultato dell'elemento vengono visualizzati/bruciati"
+
+#: meerk40t/gui/propertypanels/warpproperty.py:66
+msgid "Instructions:"
+msgstr "Istruzioni:"
+
+#: meerk40t/gui/propertypanels/warpproperty.py:68
+msgid "Use the finger tool to modify the containing shape of the warped children"
+msgstr ""
+"Utilizza lo strumento dito per modificare la forma circostante\n"
+"per modificare gli elementi contenuti."
+
+#: meerk40t/balormk/plugin.py:31
+msgid "Fibre-Laser (JCZ-Controller) (Non-MOPA)"
+msgstr "Fibra-laser (controllore JCZ) (non MOPA)"
+
 #: meerk40t/core/cutplan.py:644 meerk40t/core/cutplan.py:680
 msgid "Combine effect primitives"
 msgstr "Combina gli effetti delle primitive"
@@ -20760,9 +20760,21 @@ msgstr ""
 msgid "Generic Fibre-Laser"
 msgstr "Laser in fibra generico"
 
-#: meerk40t/balormk/plugin.py:90 meerk40t/gui/devicepanel.py:121 meerk40t/moshi/plugin.py:31
+#: meerk40t/balormk/plugin.py:53
+msgid "Fibre-Laser (JCZ-Controller) (MOPA)"
+msgstr "Fibra laser (controllerJCZ) (MOPA)"
+
+#: meerk40t/balormk/plugin.py:81
+msgid "CO2 (JCZ-Controller)"
+msgstr "CO2 (JCZ-Controller)"
+
+#: meerk40t/balormk/plugin.py:90 meerk40t/moshi/plugin.py:31 meerk40t/gui/devicepanel.py:121
 msgid "Generic CO2-Laser"
 msgstr "Laser CO2 generico"
+
+#: meerk40t/balormk/plugin.py:107
+msgid "UV (JCZ-Controller)"
+msgstr "UV (controller JCZ)"
 
 #: meerk40t/balormk/plugin.py:116 meerk40t/gui/devicepanel.py:120
 msgid "Generic UV-Laser"
@@ -20786,15 +20798,17 @@ msgstr "Diodo-laser Ortur"
 
 #: meerk40t/grbl/plugin.py:177
 msgid "Longer Ray5 (GRBL)"
-msgstr ""
+msgstr "Longer Ray5 (GRBL)"
 
 #: meerk40t/grbl/plugin.py:178
 msgid "Longer-branded 5w/10w/20w grbl diode laser.\nMake sure you verify your bed size! This machine has several upgrade kits."
 msgstr ""
+"Laser a diodi GRBL del marchio Longer (5W/10W/20W)\n"
+"Si prega di controllare e regolare le dimensioni del letto! Questa macchina dispone di vari kit di estensione."
 
 #: meerk40t/grbl/plugin.py:180 meerk40t/gui/devicepanel.py:118
 msgid "Longer Diode-Laser"
-msgstr ""
+msgstr "Longer Diode-Laser"
 
 #: meerk40t/gui/devicepanel.py:119 meerk40t/newly/plugin.py:65 meerk40t/newly/plugin.py:92 meerk40t/newly/plugin.py:119 meerk40t/newly/plugin.py:146 meerk40t/newly/plugin.py:173 meerk40t/newly/plugin.py:210 meerk40t/newly/plugin.py:247 meerk40t/newly/plugin.py:284 meerk40t/newly/plugin.py:321 meerk40t/newly/plugin.py:358 meerk40t/newly/plugin.py:395 meerk40t/newly/plugin.py:432 meerk40t/newly/plugin.py:469 meerk40t/newly/plugin.py:506 meerk40t/newly/plugin.py:543 meerk40t/newly/plugin.py:580 meerk40t/newly/plugin.py:624 meerk40t/newly/plugin.py:657 meerk40t/newly/plugin.py:698 meerk40t/newly/plugin.py:743 meerk40t/newly/plugin.py:776 meerk40t/newly/plugin.py:809 meerk40t/newly/plugin.py:842 meerk40t/newly/plugin.py:875 meerk40t/newly/plugin.py:908 meerk40t/newly/plugin.py:941 meerk40t/newly/plugin.py:970 meerk40t/newly/plugin.py:1003 meerk40t/newly/plugin.py:1036 meerk40t/newly/plugin.py:1077 meerk40t/newly/plugin.py:1110 meerk40t/newly/plugin.py:1143 meerk40t/newly/plugin.py:1184
 msgid "Newly CO2-Laser"
@@ -20804,30 +20818,222 @@ msgstr "NewlyDraw CO2-Laser"
 msgid "Reset Colors to brighter defaults"
 msgstr "Ripristino dei colori ai valori predefiniti più luminosi"
 
-#: meerk40t/gui/propertypanels/attributes.py:1412
-msgid "Auto-Hide"
-msgstr "Nascondere automaticamente"
 
-#: meerk40t/gui/propertypanels/attributes.py:1413
-msgid "Autohide children"
+
+
+#: meerk40t/lihuiyu/plugin.py:30
+msgid "K40-CO2-Laser (m2nano-Board) (Green/Blue)"
+msgstr "K40-CO2-Laser (m2nano-Board) (Grün/Blau)"
+
+#: meerk40t/lihuiyu/plugin.py:60
+msgid "K40-CO2-Laser (m3nano-Board) (Purple/Blue)"
+msgstr "K40-CO2-Laser (m3nano-Board) (Violett/Blau)"
+
+#: meerk40t/moshi/plugin.py:24
+msgid "CO2-Laser (Moshi-Board)"
+msgstr "CO2-Laser (Moshi-Board)"
+
+#: meerk40t/balormk/gui/gui.py:99
+msgid "Live Hull"
+msgstr "Contorno dal vivo"
+
+#: meerk40t/core/elements/element_treeops.py:1055
+msgid "Remove all placements"
+msgstr "Rimuovere i punti di inizio lavoro"
+
+#: meerk40t/core/elements/element_treeops.py:1057
+msgid "Remove this and all other placements"
+msgstr "Elimina questo e tutti gli altri punti di avvio del lavoro"
+
+#: meerk40t/core/elements/element_treeops.py:2141 meerk40t/core/elements/element_treeops.py:2161
+msgid "Add effect"
+msgstr "Aggiungi effetto"
+
+#: meerk40t/core/elements/element_treeops.py:2143
+msgid "Add hatch effect"
+msgstr "Aggiungi effetto tratteggio"
+
+#: meerk40t/core/elements/element_treeops.py:2145
+msgid "Add an hatch effect to the operation"
+msgstr "Aggiunge un effetto tratteggio al processo"
+
+#: meerk40t/core/elements/element_treeops.py:2163
+msgid "Add wobble effect"
+msgstr "Aggiunge l'effetto oscillazione"
+
+#: meerk40t/core/elements/element_treeops.py:2165
+msgid "Add a wobble effect to the operation"
+msgstr "Aggiungere un effetto oscillazione al processp"
+
+#: meerk40t/gui/wxmscene.py:1304
+msgid "Detect contours on background"
+msgstr "Rileva contorni sullo sfondo"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:41
+msgid "Contour recognition"
+msgstr "Riconoscimento dei contorni"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:71
+msgid "Original picture"
+msgstr "Immagine originale"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:82
+msgid "Ignore inner"
+msgstr "Ignora l'interno"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:85
+msgid "Contour simplification"
+msgstr "Semplificazione dei contorni"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:86
+msgid "None"
+msgstr "Nessuno"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:86
+msgid "Visvalingam"
 msgstr ""
 
-#: meerk40t/gui/propertypanels/attributes.py:1416
-msgid "Toggle the adoption behaviour of the effect."
+#: meerk40t/gui/propertypanels/imageproperty.py:86
+msgid "Douglas-Peucker"
 msgstr ""
 
-#: meerk40t/gui/propertypanels/attributes.py:1418
-msgid "Active: Added children will be automatically hidden, so only the result of the effect will be seen/burned"
-msgstr ""
+#: meerk40t/gui/propertypanels/imageproperty.py:90
+msgid "Detection Method"
+msgstr "Metodo di rilevamento"
 
-#: meerk40t/gui/propertypanels/attributes.py:1420
-msgid "Inactive: Added children remain unchanged, so both the child and the result of the effect will be seen/burned"
-msgstr ""
+#: meerk40t/gui/propertypanels/imageproperty.py:91
+msgid "Polygons"
+msgstr "Poligoni"
 
-#: meerk40t/gui/propertypanels/warpproperty.py:66
-msgid "Instructions:"
-msgstr "Istruzioni:"
+#: meerk40t/gui/propertypanels/imageproperty.py:91
+msgid "Bounding rectangles"
+msgstr "Rettangoli di delimitazione"
 
-#: meerk40t/gui/propertypanels/warpproperty.py:68
-msgid "Use the finger tool to modify the containing shape of the warped children"
-msgstr ""
+#: meerk40t/gui/propertypanels/imageproperty.py:94
+msgid "Automatic update"
+msgstr "Aggiornamento automatico"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:96
+msgid "Generate contours"
+msgstr "Genera contorni"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:97
+msgid "Generate placements"
+msgstr "Crea punti di inizio lavoro"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:99
+msgid "Edge (prefer short side)"
+msgstr "Bordo (preferibilmente il lato corto)"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:100
+msgid "Edge (prefer long side)"
+msgstr "Bordo (preferibilmente lato lungo)"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:101
+msgid "Center (unrotated)"
+msgstr "Centro (non ruotato)"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:102
+msgid "Center (rotated)"
+msgstr "Centro (ruotato)"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:166
+msgid "Image:"
+msgstr "Immagine:"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:197
+msgid "Parameters:"
+msgstr "Parametri:"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:200
+msgid "Minimal size:"
+msgstr "Dimensioni minime:"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:205
+msgid "Maximal size:"
+msgstr "Dimensione massima:"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:220
+msgid "Update:"
+msgstr "Aggiornamento:"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:250
+msgid "Creates the recognized contour elements / placements"
+msgstr "Crea gli elementi di contorno riconosciuti / posizionamenti"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:258
+msgid "What is the minimal size of objects (as percentage of the overall area)?"
+msgstr "Qual è la dimensione minima degli oggetti (in percentuale dell'area complessiva)?"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:259
+msgid "What is the maximal size of objects (as percentage of the overall area)?"
+msgstr "Qual è la dimensione massima degli oggetti (in percentuale dell'area complessiva)?"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:260
+msgid "Do you want to recognize objects inside of another object?"
+msgstr "Si desidera riconoscere gli oggetti all'interno di un altro oggetto?"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:261
+msgid "Do you want to create the contour itself or the minimal rectangle enclosing it?"
+msgstr "Si vuole creare il contorno stesso o il rettangolo minimo che lo racchiude?"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:262
+msgid "Shall we try to reduce the number of points for the created contour?"
+msgstr "Provo a ridurre il numero di punti per il contorno creato?"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:560
+msgid "Contours generated: {count} in {duration}"
+msgstr "Contorni generati: {count} in {duration}"
+
+#: meerk40t/image/imagetools.py:2017
+msgid "use the image as bed background"
+msgstr "utilizzare l'immagine come sfondo del letto"
+
+#: meerk40t/gui/themes.py:54
+msgid "UI-Colours"
+msgstr "Colori UI"
+
+#: meerk40t/gui/themes.py:57
+msgid "System"
+msgstr "Sistema"
+
+#: meerk40t/gui/themes.py:57
+msgid "Dark"
+msgstr "Scuro"
+
+#: meerk40t/gui/themes.py:57
+msgid "Light"
+msgstr "Chiaro"
+
+#: meerk40t/gui/themes.py:58
+msgid "Will force MeerK40t to start in dark/lightmode despite the system settings"
+msgstr "Forzerà il MeerK40t ad avviarsi in modalità scura/chiara nonostante le impostazioni del sistema"
+
+#: meerk40t/gui/wxmeerk40t.py:1022
+msgid "This uses the 'play' command that comes with the sox package,\nso you might need to install it with 'sudo apt install sox' first."
+msgstr "Questo utilizza il comando 'play' fornito con il pacchetto sox, quindi potrebbe essere necessario installarlo prima con 'sudo apt install sox'"
+
+#: meerk40t/gui/wxmeerk40t.py:1057
+msgid "Soundfile"
+msgstr "File sonoro"
+
+#: meerk40t/gui/wxmeerk40t.py:1058
+msgid "Define the soundfile MeerK40t will play when the 'beep' command is issued"
+msgstr "Definisce il file audio che MeerK40t riproduce al comando 'beep'"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:606
+msgid "Delete this contour"
+msgstr "Cancella il contorno"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:607
+msgid "Delete all others"
+msgstr "Cancella tutti gli altri"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:608
+msgid "Delete all bigger"
+msgstr "Elimina tutti i più grandi"
+
+#: meerk40t/gui/propertypanels/imageproperty.py:609
+msgid "Delete all smaller"
+msgstr "Elimina tutti i più piccoli"
+
