--- a/locale/ja/LC_MESSAGES/meerk40t.po
+++ b/locale/ja/LC_MESSAGES/meerk40t.po
@@ -8600,7 +8600,7 @@ msgstr ""
 
 #: meerk40t/lihuiyu/device.py:954
 #, fuzzy
-msgid "Intepreter cannot be attached to any device."
+msgid "Interpreter cannot be attached to any device."
 msgstr "サーバをどのデバイスにも接続できません。"
 
 #: meerk40t/lihuiyu/plugin.py:29
